# mopartsusa

./: README.md  nginx.conf
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  send_mail.rs  templates.rs
backend/templates/: _footer.stpl  _head.stpl  _header.stpl  _main.stpl
www/: contact.html  home.html  locations.html  products.html
www/static/css/: _footer.less  _header.less  contact.less  contact.min.css  contact.min.css.map  home.less  home.min.css  home.min.css.map  locations.less  locations.min.css  locations.min.css.map  main.css.map  main.less  products.less  products.min.css  products.min.css.map
www/static/img/: home-scrolling-banner.psd
www/static/js/: Contact.mjs  Home.mjs  Locations.mjs
