[package]
name = "mopartsusa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
sailfish = "0.6"

chrono = "0.4"

lettre = "0.10"

hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

urlencoding = "2.1"
